k8s/reset-py.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reset-python
spec:
  selector:
    matchLabels:
      app: reset-python
  replicas: 1
  template:
    metadata:
      labels:
        app: reset-python
    spec:
      volumes:
      - name: nfs-pv-storage
        persistentVolumeClaim:
          claimName: nfs-pv-claim
      containers:
      - name: reset-python
        image: reset-python:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: "flask"
        volumeMounts:
        - mountPath: "/mnt/counters"
          name: nfs-pv-storage
