k8s/get-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-go-service
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: get-go
