k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-go-service
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: main-go
