k8s/roll-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roll-python-service
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: roll-python
