k8s/basic-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basic-route
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /counter
    route:
    - destination:
        host: main-go-service
        port:
          number: 8000
