k8s/canary-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-route
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /counter 
    route:
    - destination:
        host: main-go-service
        subset: v1
        port:
          number: 5000
      weight: 90
    - destination:
        host: main-go-service
        subset: v2
        port:
          number: 5000
      weight: 10
